--- a/requirements.txt
+++ b/requirements.txt
@@ -2,3 +2,6 @@ Flask==1.1.2
 Werkzeug==1.0.1
 SQLAlchemy==1.3.22
 alembic==1.4.3
+flask_migrate==3.0.1
+flask_httpauth==4.4.0
+psycopg2-binary==2.9.1
